--- a/hacka-app/package.json
+++ b/hacka-app/package.json
@@ -7,6 +7,8 @@
     "@material-ui/icons": "^4.4.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-icons": "^3.7.0",
+    "react-icons-kit": "^1.3.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
