--- a/hacka-app/package.json
+++ b/hacka-app/package.json
@@ -8,6 +8,7 @@
     "google-maps-react": "^2.0.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^3.7.0",
     "react-icons-kit": "^1.3.1",
     "react-scripts": "3.1.1"
